# Av1an

./: .codeclimate.yml  .gitignore  .mergify.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  appveyor.yml  asdf.py  av1an.py  av1an.test  avian.py  bruh_av1.webm  bruh_av1.xml  bruh_av1_144p.webm  codecov.yml  compare.sh  em.ivf  main.py  pyproject.toml  rav1e-ivf.ivf  requirements  requirements.txt  rustfmt.toml  setup-minimal.py  setup.py  test_av1an.py  vid-nosound.mkv  vid-nosound_av1.mkv  vid-nosound_av1_old.mkv  vid_av1.mkv
.cargo/: config
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: mdbook.yml  prepare-release.yml  tests.yml  validate.yml  windows-build.yml
Aom_Keyframes/: Cargo.toml  build.sh
Aom_Keyframes/src/: lib.rs  main.rs
Av1an/: __init__.py  aom_kf.py  arg_parse.py  av1an.py  bar.py  boost.py  chunk.py  chunk_queue.py  compose.py  concat.py  config.py  encode.py  ffmpeg.py  fp_reuse.py  logger.py  pyscene.py  requirements.txt  resume.py  setup.py  split.py  target_vmaf.py  utils.py  vmaf.py  vvc.py
Av1an/Av1an/: arg_parse.py  bar.py  config.py  handle_callbacks.py  logger.py
Av1an/Startup/: startup.py  validation.py
Av1an/VMAF/: target_vmaf.py  vmaf.py
Av1an/encoders/: __init__.py  aom.py  encoder.py  rav1e.py  svtav1.py  svtvp9.py  vpx.py  vvc.py  x264.py  x265.py
Av1an/scenedetection/: aom_kf.py
Chunks/: chunk.py  chunk_queue.py
Encoders/: aom.py  encoder.py  rav1e.py  svtav1.py  svtvp9.py  vpx.py  vvc.py  x264.py  x265.py
GUI/: av1an_ui.py  av1an_ui.ui
Managers/: Manager.py
Projects/: Project.py
Scenedetection/: __init__.py  aom_kf.py  pyscene.py
Startup/: file_validation.py  setup.py  validate_commands.py
TargetQuality/: __init__.py  per_frame.py  per_shot.py  target_quality.py
VMAF/: __init__.py  target_vmaf.py  vmaf.py
av1an/: Cargo.toml  __init__.py  __main__.py  arg_parse.py  av1an.py  bar.py  build.rs  commandtypes.py  concat.py  encode.py  ffmpeg.py  fp_reuse.py  logger.py  resume.py  split.py  utils.py  vapoursynth.py  vmaf.py
av1an-cli/: Cargo.toml  build.rs
av1an-cli/src/: lib.rs  main.rs
av1an-core/: Cargo.toml
av1an-core/src/: aom_kf.rs  boost.rs  broker.rs  chunk.rs  communicator.rs  concat.rs  config.rs  context.rs  encoder.rs  error.rs  ffmpeg.rs  file_validation.rs  grain.rs  lib.rs  loadscript.vpy  logger.rs  logging.rs  node.rs  node_info.rs  parse.rs  progress_bar.rs  project.rs  scene_detect.rs  scenes.rs  server.rs  settings.rs  simd.rs  split.rs  target_quality.rs  util.rs  vapoursynth.rs  vmaf.rs  worker.rs
av1an-core/src/chunk/: tests.rs
av1an-core/src/concat/: tests.rs
av1an-core/src/encoder/: tests.rs
av1an-core/src/metrics/: butteraugli.rs  ssimulacra2.rs  statistics.rs  vmaf.rs  xpsnr.rs
av1an-core/src/parse/: tests.rs
av1an-core/src/scenes/: tests.rs
av1an-core/src/split/: tests.rs
av1an-core/src/target_quality/: tests.rs
av1an-core/src/util/: tests.rs
av1an-core/test-files/: blank_1080p.mkv
av1an-core/tests/: svt_av1_params.txt  vpx_help.txt  vpx_params.txt  x265_help.txt
av1an-encoder-constructor/: Cargo.toml
av1an-encoder-constructor/src/: lib.rs
av1an-input/: Cargo.toml
av1an-logging/src/: lib.rs
av1an-metrics/: Cargo.toml
av1an-output/: Cargo.toml
av1an-pyo3/: Cargo.toml  pyproject.toml
av1an-pyo3/src/: lib.rs
av1an-scene-detection/: Cargo.toml
av1an-scene-detection/src/: aom_kf.rs  av_scenechange.rs  lib.rs
av1an/chunk/: Chunk.py  __init__.py  chunk_queue.py
av1an/cli/: av1an.py
av1an/encoder/: __init__.py  aom.py  encoder.py  rav1e.py  svtav1.py  svtvp9.py  vpx.py  vvc.py  x264.py  x265.py
av1an/ffmpeg/: __init__.py  ffmpeg.py
av1an/gui/: av1an_ui.py
av1an/manager/: Counter.py  Manager.py  Pipes.py  Queue.py  __init__.py
av1an/project/: Project.py  test_project.py
av1an/scenedetection/: __init__.py  aom_kf.py  ffmpeg.py  pyscene.py
av1an/src/: main.rs
av1an/startup/: file_validation.py  setup.py  validate_commands.py
av1an/target_quality/: __init__.py  target_quality.py
av1an/vmaf/: vmaf.py
av1an_rust/: __init__.py
chunk/: chunk.py  chunk_queue.py
cli/: __main__.py
crates/av1an/: Cargo.toml  build.rs
crates/av1an-cli/: Cargo.toml
crates/av1an-cli/src/: main.rs
crates/av1an-config/: Cargo.toml
crates/av1an-core/: Cargo.toml
crates/av1an-encoders/: Cargo.toml
crates/av1an-ffmpeg/: Cargo.toml
crates/av1an-ffmpeg/src/: lib.rs
crates/av1an-logging/: Cargo.toml
crates/av1an-logging/src/: lib.rs
crates/av1an-output/: Cargo.toml
crates/av1an-output/src/: concat.rs  lib.rs
docs/: CLI.md  COMPILING.md  DOCKER.md  README.md  TargetQuality.md  docker.md  help.md
docs/Encoders/: aomenc.md  rav1e.md  svt-av1.md
encoder/: __init__.py  aom.py  encoder.py  rav1e.py  svtav1.py  svtvp9.py  vpx.py  vvc.py  x264.py  x265.py
gui/: av1an_ui.py
libAv1an/: requirements.txt  setup.py
libAv1an/Chunks/: chunk.py  chunk_queue.py  split.py
libAv1an/Encoders/: __init__.py  aom.py  encoder.py  rav1e.py  svtav1.py  svtvp9.py  vpx.py  vvc.py  x264.py  x265.py
libAv1an/LibAv1an/: args.py  callbacks.py  concat.py  encode.py  ffmpeg.py  fp_reuse.py  run_cmd.py  setup.py  utils.py
libAv1an/Scenedetection/: aom_kf.py  pyscene.py
libAv1an/VMAF/: target_vmaf.py  vmaf.py
logs/: av1an.log.2024-12-28  av1an.log.2024-12-29
manager/: Manager.py
project/: Project.py  __init__.py
proto/: video_encoding.proto
site/: book.toml
site/src/: SUMMARY.md  av1an.md  compiling.md  docker.md
src/: concat.rs  lib.rs  main.rs  vapoursynth.rs
startup/: setup.py  validate_commands.py
target_quality/: __init__.py  target_quality.py
tests/: test_av1an.py
utils/: __init__.py  aom_keyframes.py  aom_kf.py  arg_parse.py  bar.py  boost.py  compose.py  config.py  dynamic_progress_bar.py  encode.py  encoder_comp.py  ffmpeg.py  firstpassreuse.py  fp_reuse.py  job.py  logger.py  pyscene.py  pyscenedetect.py  setup.py  split.py  target_vmaf.py  utils.py  vmaf.py
vids/: output.webm  vid.webm
vmaf/: __init__.py  vmaf.py
(+45 files in other folders)
