[workspace]
members = ["av1an-core", "av1an", "av1an-config", "av1an-encoders"]
resolver = "2"

[profile.dev.package.av-scenechange]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.ci]
inherits = "release"
lto = "off"
codegen-units = 1024
debug-assertions = true
overflow-checks = true
