[workspace]
members = [
    "av1an-core",
    "av1an",
    "av1an-config",
    "av1an-encoders",
    "av1an-metrics",
    "av1an-output",
    "av1an-input", "av1an-cli",
]
resolver = "2"

[profile.dev.package.av-scenechange]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.ci]
inherits = "release"
lto = "off"
codegen-units = 1024
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
tracing-appender = "0.2"
tracing = "0.1"
