[build-system]
build-backend = "maturin"
requires = ["setuptools"]

[tool.maturin]
bindings = "pyo3"
manylinux = "on"

[tool.maturin.dependencies]
python = "^3.6"

[package.metadata.maturin]
requires-dist = [
    "numpy",
    "scenedetect[opencv]",
    "opencv-python",
    "tqdm",
    "psutil",
    "scipy",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
