[package]
name = "aom_keyframes"
version = "0.1.0"
authors = ["Zen <46526140+master-of-zen@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "aom_keyframes"
crate-type = ["dylib"]

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.116", features =["derive"]}

[dependencies.cpython]
cpython = "0.5"
features = ["extension-module"]

