[package]
name = "av1an-cli"
version = "0.2.1"
authors = ["Zen <master_of_zen@protonmail.com>"]
description = """
Cross-platform command-line AV1 / VP9 / HEVC / H264 encoding framework with per scene quality encoding [Command line library]
"""
repository = "https://github.com/master-of-zen/Av1an"
keywords = ["video"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
structopt = "0.3.22"
shlex = "1.0.0"
ctrlc = "3.1.9"
path_abs = "0.5.1"
anyhow = "1.0.42"
av1an-core = { path = "../av1an-core", version = "0.2.0" }
thiserror = "1.0.30"
once_cell = "1.8.0"

[build-dependencies]
vergen = { version = "5", default-features = false, features = [
  "git",
  "build",
  "rustc",
  "cargo",
] }

[dependencies.ffmpeg-next]
version = "4.4.0"

[features]
ffmpeg_static = ["ffmpeg-next/static", "ffmpeg-next/build"]
