[package]
name = "av1an-core"
version = "0.4.4"
rust-version = "1.81"
edition = "2021"
authors = ["Zen <master_of_zen@protonmail.com>"]
description = """
Cross-platform command-line AV1 / VP9 / HEVC / H264 encoding framework with per scene quality encoding [Core library]
"""
repository = "https://github.com/master-of-zen/Av1an"
keywords = ["video"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
arrayvec = "0.7.2"
av-format = "0.7.0"
av-ivf = "0.5.0"
av-scenechange = { version = "0.15.0", default-features = false, features = [
    "ffmpeg",
    "vapoursynth",
] }
av1-grain = { version = "0.2.4", default-features = false, features = [
    "create",
] }
cfg-if = "1.0.0"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.5"
indicatif = "0.17.2"
itertools = "0.14.0"
log = "0.4.14"
memchr = "2.4.1"
nom = "7.1.1"
num-traits = "0.2.19"
once_cell = "1.8.0"
parking_lot = "0.12.4"
pastey = "0.1.0"
path_abs = "0.5.1"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simdutf8 = "0.1.3"
splines = "4.0.0"
strsim = "0.11.0"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.35.2"
textwrap = "0.16.0"
thiserror = "2.0.11"
which = "8.0.0"
y4m = "0.8.0"
# TODO: move all of this CLI stuff to av1an-cli
ansi_term = "0.12.1"
ctrlc = "3.4.7"
regex = "1.11.1"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TODO: https://github.com/elast0ny/affinity/issues/2
# update this when macos support is implemented
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
affinity = "0.1.2"

[dependencies.smallvec]
version = "1.15.1"
default-features = false
features = ["const_generics", "const_new", "union"]

[dependencies.ffmpeg]
package = "ffmpeg-the-third"
version = "3.0.1"
features = ["serialize"]

[dependencies.plotters]
version = "0.3.1"
default-features = false
features = ["svg_backend", "line_series"]

[dependencies.vapoursynth]
version = "0.4.0"
features = ["vsscript-functions", "vapoursynth-functions"]

[dependencies.dashmap]
version = "6.0.0"
features = ["serde"]

[dev-dependencies]
tempfile = "3.20.0"

[features]
default = ["vapoursynth_new_api"]
ffmpeg_static = ["ffmpeg/static", "ffmpeg/build"]
vapoursynth_new_api = [
    "vapoursynth/vapoursynth-api-32",
    "vapoursynth/vsscript-api-31",
]

[lints.clippy]
inline_always = "warn"
missing_inline_in_public_items = "warn"
