[package]
name = "av1an-encoder-constructor"
version = "0.1.2"
edition = "2018"
authors = ["Zen <46526140+master-of-zen@users.noreply.github.com>"]
homepage = "https://github.com/master-of-zen/Av1an"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
regex = "1"
