[build-system]
build-backend = "maturin"
requires = ["setuptools", "maturin"]

[tool.maturin]
# cargo-extra-args = ["--release"]
bindings = "pyo3"
manylinux = "off"

#[tool.maturin.dependencies]
#python = "^3.6"

[package.metadata.maturin]
requires-dist = [
    "numpy",
    "scenedetect[opencv]",
    "opencv-python",
    "psutil",
    "scipy",
    "matplotlib",
    "vapoursynth",
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
