[package]
name = "av1an"
authors.workspace = true
version.workspace = true
description = """
Cross-platform command-line AV1 / VP9 / HEVC / H264 encoding framework with per scene quality encoding [Command line library]
"""
repository.workspace = true
keywords = ["video"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
rust-version.workspace = true
edition = "2021"
readme = "../README.md"

[[bin]]
name = "av1an"
path = "src/main.rs"

[dependencies]

shlex = "1.3.0"
path_abs = "0.5.1"
anyhow = "1.0.42"
av1an-core = { path = "../av1an-core", version = "0.4.1" }
thiserror = "1.0.30"
once_cell = "1.8.0"
ansi_term = "0.12.1"
tracing-appender = "0.2"
tracing = "0.1"
tokio = { version = "1.28", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap.workspace = true


[build-dependencies.vergen-git2]
version = "1.0.0"
features = ["build", "rustc", "cargo"]

[dependencies.ffmpeg]
package = "ffmpeg-the-third"
version = "2.0.1"
features = ["serialize"]

[features]
default = []
ffmpeg_static = ["ffmpeg/static", "ffmpeg/build", "av1an-core/ffmpeg_static"]
