[package]
name = "av1an"
version = "0.4.4"
rust-version = "1.82"
edition = "2021"
authors = ["Zen <master_of_zen@protonmail.com>"]
description = """
Cross-platform command-line AV1 / VP9 / HEVC / H264 encoding framework with per scene quality encoding [Command line library]
"""
repository = "https://github.com/master-of-zen/Av1an"
keywords = ["video"]
categories = ["command-line-utilities"]
license = "GPL-3.0"
readme = "../README.md"

[[bin]]
name = "av1an"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.42"
av1an-core = { path = "../av1an-core", version = "0.4.1" }
clap = { version = "4.5.38", features = ["derive"] }
num-traits = "0.2.19"
once_cell = "1.8.0"
path_abs = "0.5.1"
shlex = "1.3.0"
tracing = "0.1"

[build-dependencies.vergen-git2]
version = "1.0.0"
features = ["build", "rustc", "cargo"]

[dependencies.ffmpeg]
package = "ffmpeg-the-third"
version = "3.0.1"
features = ["serialize"]

[features]
default = []
ffmpeg_static = ["ffmpeg/static", "ffmpeg/build", "av1an-core/ffmpeg_static"]
